2008-04-16  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/apt-worker.cc (rescue_operation_with_dir): Call DumpErrors
	to prevent pending errors to leak into the next operation.

2008-04-16  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/util.cc (ENTERTAINMENT_DIALOG_MIN_WIDTH): Removed.
	(ENTERTAINMENT_DIALOG_MAX_WIDTH): Removed.
	(ENTERTAINMENT_LABEL_MAX_WIDTH): Removed.
	(ENTERTAINMENT_DIALOG_WIDTH): New, used to set a fixed size for
	entertainment dialogs.
	(entertainment_update_title): Removed code for rezizing the dialog
	or ellipsizing the text depending on the final length of the text
	to be shown as the main label.
	(start_entertaining_user): Removed code for resizing the dialog or
	ellipsizing the text of the main label, and just set the dialog
	width to a fixed size (550px), and activated the "line wrap" mode
	for such that label.

2008-04-15  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/settings.h, src/settings.cc (red_pill_check_always): New.
	Handle it in all the right places.
	(make_settings_tab): Put the settings in a scrolled window.
	* src/main.cc (maybe_refresh_package_cache_without_user): Always
	call refresh_package_cache_without_user in blue-pill mode, but use
	red_pill_check_always in red-pill mode to determine whether to
	call it (N83308).
	(create_toolbar): Revert change from 2008-04-14: only include
	refresh button in red-pill mode (N83308).

2008-04-15  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* src/main.cc (installed_package_activated) : If the user taps on a
	system update, a banner "ai_ni_unable_to_uninstall_system_update" is
	shown. This is for consistency with the changes on 2008-04-14.

	* src/hildon-application-manager-util : launch ham-after-boot in the
	background, so we avoid blocking (N84254).

2008-04-14  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* utils/maemo-select-menu-location-main.c (run_move_to_dialog) : This
	function returns NULL if the dialog is closed with the ESC key
	(N84151).
